apply license to more generated files, simplify copying

--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,7 @@
           <consoleOutput>true</consoleOutput>
           <!-- we exclude the generated files, see CtGenerationTest -->
           <excludes>spoon/support/visitor/clone/CloneBuilder.java</excludes>
+          <excludes>spoon/support/visitor/clone/CloneVisitor.java</excludes>
           <excludes>spoon/reflect/visitor/CtBiScannerDefault.java</excludes>
           <excludes>spoon/support/visitor/equals/EqualsVisitor.java</excludes>
           <excludes>spoon/support/visitor/replace/ReplacementVisitor.java</excludes>
