--- a/spoon-pom/pom.xml
+++ b/spoon-pom/pom.xml
@@ -282,6 +282,9 @@
                                     <include>src/main/java/**</include>
                                     <!-- We also want to check the license in templates to generate files with the proper header -->
                                     <include>src/test/java/spoon/generating/clone/*</include>
+                                    <include>src/test/java/spoon/generating/meta/*</include>
+                                    <include>src/test/java/spoon/generating/replace/*</include>
+                                    <include>src/test/java/spoon/generating/scanner/*</include>
                                 </includes>
                             </licenseSet>
                         </licenseSets>
