chore: No jbang

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -119,8 +119,10 @@ jobs:
 
       - name: Time nix setup
         run: nix develop ${{ env.NIX_OPTIONS }} .#extraChecks --command true
+      - name: Time nix setup
+        run: nix develop ${{ env.NIX_OPTIONS }} .#extraChecks --command mvn -f spoon-pom -B install -Dmaven.test.skip=true -DskipDepClean
       - name: Run Javadoc quality check
-        run: nix develop ${{ env.NIX_OPTIONS }} .#extraChecks --command ci-javadoc-quality
+        run: nix develop ${{ env.NIX_OPTIONS }} .#extraChecks --command javadoc-quality
 
   reproducible-builds:
     runs-on: ubuntu-latest
