--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   <version>11.0.1-SNAPSHOT</version>
   <name>Spoon Core</name>
   <description>Spoon is a tool for meta-programming, analysis and transformation of Java programs.</description>
-  <url>http://spoon.gforge.inria.fr/</url>
+  <url>https://spoon.gforge.inria.fr/</url>
 
   <properties>
     <sonar.coverage.exclusions>
