sign maven release artifacts with sigstore/cosign
This makes it so all release pipelines attest the artifacts they build,
by signing the corresponding checksums. Optionally release workflows may
opt out of this behavior, which in this commit is done for `nightly` as
specified by @monperrus on the linked issue.

Closes #5957

Co-authored-by: ludvigch <ludvigch@kth.se>

--- a/.github/workflows/release-nightly.yml
+++ b/.github/workflows/release-nightly.yml
@@ -9,4 +9,5 @@ jobs:
     uses: ./.github/workflows/jreleaser.yml
     with:
       release-script-to-run: chore/release-nightly.sh
+      attest-artifacts: false
     secrets: inherit
