--- a/.github/workflows/jreleaser.yml
+++ b/.github/workflows/jreleaser.yml
@@ -6,6 +6,14 @@ on:
       release-script-to-run:
         required: true
         type: string
+      attest-artifacts:
+        required: false
+        type: boolean
+        default: true # calling workflows can opt-out of attestation
+
+permissions:
+  id-token: write # for verifying identity in attestation process
+  attestations: write # to push attestation
 
 jobs:
   jreleaser:
@@ -28,6 +36,12 @@ jobs:
           JRELEASER_GPG_SECRET_KEY: ${{ secrets.JRELEASER_GPG_SECRET_KEY }}
           JRELEASER_NEXUS2_MAVEN_CENTRAL_USERNAME: ${{ secrets.JRELEASER_NEXUS2_MAVEN_CENTRAL_USERNAME }}
           JRELEASER_NEXUS2_MAVEN_CENTRAL_PASSWORD: ${{ secrets.JRELEASER_NEXUS2_MAVEN_CENTRAL_PASSWORD }}
+
+      - name: Sign artifacts with sigstore/cosign
+        if: inputs.attest-artifacts
+        uses: actions/attest-build-provenance@1c608d11d69870c2092266b3f9a6f3abbf17002c # v1.4.3
+        with:
+          subject-path: './target/staging-deploy/**/*.jar'
 
         # Log failures
       - name: JReleaser release output
