--- a/.github/workflows/release-nightly.yml
+++ b/.github/workflows/release-nightly.yml
@@ -3,11 +3,15 @@ name: Release nightly version
 on:
     schedule:
       - cron: '0 0 * * *' # Every day at 00:00 UTC (https://crontab.guru/#0_0_*_*_*)
+    # For testing also allow it now...
+    pull_request:
+      branches:
+        - master
 
 jobs:
   nightly:
     uses: ./.github/workflows/jreleaser.yml
     with:
       release-script-to-run: chore/release-nightly.sh
-      attest-artifacts: false
+      attest-artifacts: true
     secrets: inherit
