attempt to fix 3 args issue in dirty waters action

--- a/.github/workflows/dirty-waters.yml
+++ b/.github/workflows/dirty-waters.yml
@@ -39,30 +39,31 @@ jobs:
         id: check-first-run
         run: |
           # Check if this workflow has run before
-          RUNS=$(gh api repos/${{ github.repository }}/actions/workflows/${{ github.workflow }}/runs --jq '.total_count')
+          WORKFLOW_FILE=$(gh api repos/${{ github.repository }}/actions/workflows --jq '.workflows[] | select(.name == "${{ github.workflow }}") | .path')
+          RUNS=$(gh api repos/${{ github.repository }}/actions/workflows/$WORKFLOW_FILE/runs --jq '.total_count')
           echo "is_first_run=$([[ $RUNS -le 1 ]] && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_OUTPUT: ${{ github.workspace }}/output
+        shell: bash
 
       - name: Run Static Dirty Waters analysis
         if: steps.check-first-run.outputs.is_first_run == 'true'
         uses: chains-project/dirty-waters-action@41bbaa9ecbaefa6448ef95795d27b4ce4ae8086c
         with:
           # example args, change as needed
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           project_repo: ${{ github.repository }}
           differential_analysis: false
           package_manager: npm # Change this according to your project
           comment_on_commit: true # Optional: comments on commits (outside PRs) if high severity issues are found
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run Differential Dirty Waters Analysis
         if: ${{ !(steps.check-first-run.outputs.is_first_run == 'true') }}
         uses: chains-project/dirty-waters-action@41bbaa9ecbaefa6448ef95795d27b4ce4ae8086c
         with:
           # example args, change as needed
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           project_repo: ${{ github.repository }}
           package_manager: npm # Change this according to your project
           comment_on_commit: true # Optional: comments on commits (outside PRs) if high severity issues are found
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
