fix: missing workflowfile var

--- a/.github/workflows/dirty-waters.yml
+++ b/.github/workflows/dirty-waters.yml
@@ -39,7 +39,7 @@ jobs:
         id: check-first-run
         run: |
           WORKFLOW_FILE=$(gh api repos/${{ github.repository }}/actions/workflows --jq '.workflows[] | select(.name == "${{ github.workflow }}") | .path')
-          RUNS=$(gh api repos/${{ github.repository }}/actions/workflows/run-formatter.yml/runs --jq '[.workflow_runs[] | select(.conclusion=="success")] | length')
+          RUNS=$(gh api repos/${{ github.repository }}/actions/workflows/$WORKFLOW_FILE/runs --jq '[.workflow_runs[] | select(.conclusion=="success")] | length')
           echo "is_first_run=$([[ $RUNS -le 1 ]] && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
