--- a/.github/workflows/dirty-waters.yml
+++ b/.github/workflows/dirty-waters.yml
@@ -50,6 +50,7 @@ jobs:
         uses: chains-project/dirty-waters-action@70d5044612d1c4360f9588ae902a1962ad2aa7dd
         with:
           # example args, change as needed
+          dirty_waters_version: 3b83ec05b4072e43e65a2ad95b33d9523e0dbda3
           github_token: ${{ secrets.GITHUB_TOKEN }}
           project_repo: ${{ github.repository }}
           differential_analysis: false
@@ -61,6 +62,7 @@ jobs:
         uses: chains-project/dirty-waters-action@70d5044612d1c4360f9588ae902a1962ad2aa7dd
         with:
           # example args, change as needed
+          dirty_waters_version: 3b83ec05b4072e43e65a2ad95b33d9523e0dbda3
           github_token: ${{ secrets.GITHUB_TOKEN }}
           project_repo: ${{ github.repository }}
           package_manager: maven # Change this according to your project
