--- a/.github/workflows/dirty-waters.yml
+++ b/.github/workflows/dirty-waters.yml
@@ -31,7 +31,7 @@ jobs:
         id: restore-cache
         uses: actions/cache/restore@v4
         with:
-          path: tool/cache
+          path: ./tool/cache
           key: dirty-waters-db-${{ runner.os }}-${{ github.repository }}
           restore-keys: |
             dirty-waters-db-${{ runner.os }}-
@@ -74,5 +74,5 @@ jobs:
         id: save-cache
         uses: actions/cache/save@v4
         with:
-          path: tool/cache
+          path: ./tool/cache
           key: dirty-waters-db-${{ runner.os }}-${{ github.repository }}
