--- a/.github/workflows/dirty-waters.yml
+++ b/.github/workflows/dirty-waters.yml
@@ -27,11 +27,14 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Ensure Cache Directory Exists
+        run: mkdir -p tool/cache
+
       - name: Restore Dirty Waters database cache
         id: restore-cache
         uses: actions/cache/restore@v4
         with:
-          path: ./tool/cache
+          path: cache
           key: dirty-waters-db-${{ runner.os }}-${{ github.repository }}
           restore-keys: |
             dirty-waters-db-${{ runner.os }}-
@@ -49,7 +52,7 @@ jobs:
 
       - name: Run Static Dirty Waters analysis
         if: steps.check-first-run.outputs.is_first_run == 'true'
-        uses: chains-project/dirty-waters-action@90eec491ffad5ebf25d12e0fec794571a9524fc7
+        uses: chains-project/dirty-waters-action@6de7619b1fdee3dfb88e8b3d4cd958f17b3d636f
         with:
           # example args, change as needed
           dirty_waters_version: 3b83ec05b4072e43e65a2ad95b33d9523e0dbda3
@@ -61,7 +64,7 @@ jobs:
 
       - name: Run Differential Dirty Waters Analysis
         if: ${{ !(steps.check-first-run.outputs.is_first_run == 'true') }}
-        uses: chains-project/dirty-waters-action@90eec491ffad5ebf25d12e0fec794571a9524fc7
+        uses: chains-project/dirty-waters-action@6de7619b1fdee3dfb88e8b3d4cd958f17b3d636f
         with:
           # example args, change as needed
           dirty_waters_version: 3b83ec05b4072e43e65a2ad95b33d9523e0dbda3
@@ -74,5 +77,5 @@ jobs:
         id: save-cache
         uses: actions/cache/save@v4
         with:
-          path: ./tool/cache
+          path: /app/dirty-waters/tool/cache
           key: dirty-waters-db-${{ runner.os }}-${{ github.repository }}
