--- a/.github/workflows/dirty-waters.yml
+++ b/.github/workflows/dirty-waters.yml
@@ -31,7 +31,7 @@ jobs:
         id: restore-cache
         uses: actions/cache/restore@v4
         with:
-          path: cache/
+          path: /cache/
           key: dirty-waters-db-${{ runner.os }}-${{ github.repository }}
           restore-keys: |
             dirty-waters-db-${{ runner.os }}-
@@ -39,7 +39,7 @@ jobs:
 
       - name: Generate the cache if not existing yet
         if: steps.restore-cache.outputs.cache-hit != 'true'
-        run: mkdir cache/
+        run: mkdir /cache/
 
       - name: Check if first dirty-waters run
         id: check-first-run
@@ -51,8 +51,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         shell: bash
 
-      - name: Run tree command on root
-        run: tree /
+      - name: Run tree command on pwd -- pwd is spoon
+        run: tree .
 
       - name: Run Static Dirty Waters analysis
         if: steps.check-first-run.outputs.is_first_run == 'true'
