--- a/.github/workflows/dirty-waters.yml
+++ b/.github/workflows/dirty-waters.yml
@@ -31,15 +31,11 @@ jobs:
         id: restore-cache
         uses: actions/cache/restore@v4
         with:
-          path: /app/dirty-waters/tool/cache
+          path: tool/cache
           key: dirty-waters-db-${{ runner.os }}-${{ github.repository }}
           restore-keys: |
             dirty-waters-db-${{ runner.os }}-
             dirty-waters-db-
-
-      - name: Generate the cache if not existing yet
-        if: steps.restore-cache.outputs.cache-hit != 'true'
-        run: mkdir -p /app/dirty-waters/tool/cache
 
       - name: Check if first dirty-waters run
         id: check-first-run
