didnt work :( ls'ing!

--- a/.github/workflows/dirty-waters.yml
+++ b/.github/workflows/dirty-waters.yml
@@ -42,6 +42,9 @@ jobs:
         if: steps.restore-cache.outputs.cache-hit != 'true'
         run: mkdir -p tool/cache
 
+      - name: List the cache directory
+        run: ls -la tool/cache
+
       - name: Check if first dirty-waters run
         id: check-first-run
         run: |
