--- a/.github/workflows/dirty-waters.yml
+++ b/.github/workflows/dirty-waters.yml
@@ -42,9 +42,6 @@ jobs:
         if: steps.restore-cache.outputs.cache-hit != 'true'
         run: mkdir -p tool/cache
 
-      - name: Tree the cache directory
-        run: tree tool/cache
-
       - name: Check if first dirty-waters run
         id: check-first-run
         run: |
@@ -55,29 +52,29 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         shell: bash
 
-      # - name: Run Static Dirty Waters analysis
-      #   if: steps.check-first-run.outputs.is_first_run == 'true'
-      #   uses: chains-project/dirty-waters-action@23080dfe897fae132cbe31ec7d5ccc9287657f4e
-      #   with:
-      #     # example args, change as needed
-      #     dirty_waters_version: 3b83ec05b4072e43e65a2ad95b33d9523e0dbda3
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     project_repo: ${{ github.repository }}
-      #     package_manager: maven # Change this according to your project
-      #     comment_on_commit: true # Optional: comments on commits (outside PRs) if high severity issues are found
+      - name: Run Static Dirty Waters analysis
+        if: steps.check-first-run.outputs.is_first_run == 'true'
+        uses: chains-project/dirty-waters-action@3ecf319b6a0891048179b4191fd03d7b05666674
+        with:
+          # example args, change as needed
+          dirty_waters_version: 3b83ec05b4072e43e65a2ad95b33d9523e0dbda3
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          project_repo: ${{ github.repository }}
+          package_manager: maven # Change this according to your project
+          comment_on_commit: true # Optional: comments on commits (outside PRs) if high severity issues are found
 
-      # - name: Run Differential Dirty Waters Analysis
-      #   if: ${{ !(steps.check-first-run.outputs.is_first_run == 'true') }}
-      #   uses: chains-project/dirty-waters-action@23080dfe897fae132cbe31ec7d5ccc9287657f4e
-      #   with:
-      #     # example args, change as needed
-      #     dirty_waters_version: 3b83ec05b4072e43e65a2ad95b33d9523e0dbda3
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     project_repo: ${{ github.repository }}
-      #     # TODO: remove this hardcoded line, for debug only, should be true!
-      #     differential_analysis: false
-      #     package_manager: maven # Change this according to your project
-      #     comment_on_commit: true # Optional: comments on commits (outside PRs) if high severity issues are found
+      - name: Run Differential Dirty Waters Analysis
+        if: ${{ !(steps.check-first-run.outputs.is_first_run == 'true') }}
+        uses: chains-project/dirty-waters-action@3ecf319b6a0891048179b4191fd03d7b05666674
+        with:
+          # example args, change as needed
+          dirty_waters_version: 3b83ec05b4072e43e65a2ad95b33d9523e0dbda3
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          project_repo: ${{ github.repository }}
+          # TODO: remove this hardcoded line, for debug only, should be true!
+          differential_analysis: false
+          package_manager: maven # Change this according to your project
+          comment_on_commit: true # Optional: comments on commits (outside PRs) if high severity issues are found
 
       - name: Save Dirty Waters database cache
         id: save-cache
