--- a/.github/workflows/dirty-waters.yml
+++ b/.github/workflows/dirty-waters.yml
@@ -27,17 +27,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Get previous commit SHA
-        id: get-previous-commit
-        run: echo "previous_commit=$(git rev-parse HEAD^1)" >> $GITHUB_ENV
-        shell: bash
-
       - name: Restore Dirty Waters database cache
         id: restore-cache
         uses: actions/cache/restore@v4
         with:
           path: tool/cache
-          key: dirty-waters-cache-${{ runner.os }}-${{ github.repository }}-${{ steps.get-previous-commit.outputs.previous_commit }}
+          key: dirty-waters-cache-${{ runner.os }}-${{ github.repository }}-${{ github.event.before }}
 
       - name: Create the cache directory if it doesn't exist
         id: mkdir-cache
