--- a/.github/workflows/dirty-waters.yml
+++ b/.github/workflows/dirty-waters.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: tool/cache
-          key: dirty-waters-cache-${{ runner.os }}-${{ github.repository }}-${{ github.event.before }}
+          key: dirty-waters-cache-${{ runner.os }}-${{ github.repository }}-d31fbabe545f80b5b6544a91ae70b8dc291d42c1
 
       - name: Create the cache directory if it doesn't exist
         id: mkdir-cache
