chore: sanity check, check if comments on commits are working

--- a/.github/workflows/dirty-waters.yml
+++ b/.github/workflows/dirty-waters.yml
@@ -30,3 +30,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           package_manager: maven
           #no_gradual_report: true
+          comment_on_commit: true
