--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
     <checkstyle.config.location>checkstyle.xml</checkstyle.config.location>
   </properties>
 
+  <scm>
+      <url>https://github.com/INRIA/spoon/tree/${project.scm.tag}</url>
+      <connection>scm:git:https://github.com/INRIA/spoon.git</connection>
+      <developerConnection>scm:git:ssh://github.com/INRIA/spoon.git</developerConnection>
+      <tag>v${project.version}</tag>
+  </scm>
+
   <dependencies>
     <dependency>
       <groupId>org.eclipse.jdt</groupId>
