Revert "revert: remove manual trigger for nightly releases"
This reverts commit 2adfeab152e6c039288f66a79f140807d48205ac.

--- a/.github/workflows/release-manual.yml
+++ b/.github/workflows/release-manual.yml
@@ -1,6 +1,7 @@
 name: Manual Release Workflow
 
 on:
+  workflow_dispatch:
     inputs:
       version:
         description: 'Next release version'
