--- a/spoon-visualisation/pom.xml
+++ b/spoon-visualisation/pom.xml
@@ -22,12 +22,19 @@
     </parent>
 
     <properties>
+        <maven.compiler.release>24</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jfx.version>26-ea+6</jfx.version>
+        <jfx.version>26-ea+25</jfx.version>
     </properties>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.15.0</version>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
